# CADLift

./: .dockerignore  .env.example  .gitignore  App.tsx  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MAYO_INSTALLATION_GUIDE.md  PHASE_5_FINAL_SUMMARY.md  README.md  README.tr.md  REFERENCES.md  ULTRA_REALISTIC_ANY_OBJECT_PLAN.md  i18n.ts  index.css  index.html  metadata.json  package-lock.json  package.json  playwright.config.ts  render.yaml  start-dev.sh  tailwind.config.js  tsconfig.json  types.ts
backend/: .env.example  check_imports.py  diagnose_shap_e.py  pyproject.toml  pytest.ini  read_log.py  reset_password.py  shap_e_test_log.txt  test_advanced_precision.py  test_blueprint_pipeline.py  test_bolt.stl  test_bowl.stl  test_clip_only.py  test_dxf_export_fix.py  test_image_to_3d.py  test_mayo_integration.py  test_output.stl  test_phase1_integration.py  test_phase3_quality_enhancement.py  test_phase4_hybrid.py  test_polygon_fix.py  test_polygon_fixed.stl  test_precision_local.py  test_prompt_routing.py  test_prompt_to_object_stability.py  test_shap_e_final.py  test_shap_e_generation.py  test_single_prompt.py  test_sweep.stl  test_triposr_generation.py  uvicorn-log.txt
backend/app/: components.py  deps.py  main.py  materials.py  worker.py
backend/docs/: ULTRA_REALISTIC_ANY_OBJECT_PLAN.md
backend/static/: README.md  demo.html  index.html
backend/test_outputs/: build123d_hollow_box.step  build123d_l_shaped.step  build123d_multiple_rooms.step  build123d_simple_box.step  cadquery_hollow_box.step  cadquery_l_shaped.step  cadquery_multiple_rooms.step  phase1_chair.ply  (+13 more)
(+324 files in other folders)
